# ms-dsc

./: .gitignore  build.ps1  data.build.json  helpers.build.psm1
adapters/python/: .project.data.json  Microsoft.Adapter.Python3.dsc.resource.json  README.md  pyproject.toml  python.dsc.resource.json  python3.dsc.resource.json
adapters/python/examples/dsc-example-resource/: README.md  pyproject.toml
adapters/python/examples/dsc-example-resource/dsc_example_resource/: resources.py
adapters/python/examples/dsc-example-resource/dsc_example_resource/dsc/: Example.Counter.dsc.adaptedResource.json  Example.EnvVar.dsc.adaptedResource.json
adapters/python/examples/dsc-example-resource/examples/: ensure-counters.dsc.yaml  ensure-envvars.dsc.yaml  ensure-greeting.dsc.yaml
adapters/python/examples/file-resource/: README.md  pyproject.toml
adapters/python/examples/file-resource/file_resource/: resource.py
adapters/python/examples/file-resource/file_resource/dsc/: Example.ManagedFile.dsc.adaptedResource.json
adapters/python/examples/file_presence/: README.md  pyproject.toml
adapters/python/examples/file_presence/file_presence/: resource.py
adapters/python/examples/file_presence/file_presence/dsc/: Example.FilePresence.dsc.adaptedResource.json
adapters/python/ms-dsc/: README.md  pyproject.toml
adapters/python/ms-dsc/ms_dsc/: __init__.py  cli.py  logging.py  metadata.py  results.py
adapters/python/ms-dsc/ms_dsc/schema/: _protocol.py
adapters/python/pyadapter/: __main__.py  cache.py  cli.py  discovery.py  logging.py  router.py  schema.py
adapters/python/rfc/: 0001-python-adapter.md
adapters/python/tests/: conftest.py  pytest.ini
adapters/python/tests/fixture/: pyproject.toml
adapters/python/tests/fixture/dsc_test_resource/: resources.py
adapters/python/tests/fixture/dsc_test_resource/dsc/: DscTest.Export.dsc.adaptedResource.json  DscTest.Get.dsc.adaptedResource.json  DscTest.ReadWrite.dsc.adaptedResource.json
adapters/python/tests/integration/: python.adapter.tests.ps1
adapters/python/tests/unit/: test_bundled_sdk.py  test_cache.py  test_cli.py  test_discovery.py  test_example_resources.py  test_logging.py  test_main_module.py  test_manifest.py  test_metadata.py  test_protocols.py  test_pyadapter_schema.py  test_results.py  test_router.py  test_schema.py
dsc/: Example.Greeting.dsc.adaptedResource.json  Microsoft.Adapter.Python.dsc.resource.json  pyadapter.py  python.discover.py  python.dsc.extension.json  python.dsc.resource.json  python3.dsc.resource.json
dsc/ms_dsc/: cli.py  protocols.py  resource.py
dsc/ms_dsc/hooks/: hatchling.py
dsc/ms_dsc/schema/: __init__.py  _dataclass.py  _pydantic.py
dsc/pyadapter/: __main__.py  cache.py  discovery.py  router.py  schema.py
examples/python-pydantic-resource/: README.md  pyproject.toml
examples/python-pydantic-resource/my_package/: __init__.py  my_resource.py
extensions/python/: .project.data.json  python.discover.py
rfc/draft/: 0001-python-adapter.md
